<resources>
    <string name="app_name">DairaApp</string>
    <string name="todo37987">TODO</string>
    <string name="view_registerations">View registerations</string>
    <string name="add_event_category">Add Event Category</string>
    <string name="add_mentors">Add Mentors</string>
    <string name="event">Event</string>
    <string name="button">Button</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="add">Add</string>
    <string name="add_mentor">Add Mentor</string>
    <string name="mentor_portal">Mentor Portal</string>
    <string name="add_event">Add Event</string>
    <string name="add_oc">Add OC</string>
    <string name="view_event_registeration">View Event Registeration</string>
    <string name="view_all_registeration">View All Registeration</string>
    <string name="oc_portal">OC Portal</string>
    <string name="mentor_s_message">Mentor\'s Message:</string>
    <string name="see_registered_participants">See Registered Participants</string>
    <string name="set_event_venue">Set Event Venue</string>
    <string name="send_event_news">Send Event News</string>
    <string name="message_here">Message here...</string>
    <string name="category">Category</string>
    <string name="title_activity_participant_portal">ParticipantPortal</string>
    <string name="send_message">Send Message</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview7789">TextView</string>
    <string name="textview7879789709">TextView</string>
    <string name="textview3245">TextView</string>
    <string name="image_url">Image URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="sub_event">Sub Event</string>
    <string name="description">Description</string>
    <string name="enter_subevent">Enter SubEvent</string>
</resources>